--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "albertofem/rsync-lib": "1.0.0",
         "fideloper/proxy": "^4.0",
         "kingofcode/laravel-uploadable": "^0.1.7",
         "laravel/framework": "5.8.*",
