--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "php": "^7.1.3",
         "albertofem/rsync-lib": "1.0.0",
         "fideloper/proxy": "^4.0",
+        "karakhanyans/comparison": "^1.0",
         "kingofcode/laravel-uploadable": "^0.1.7",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "vi-kon/laravel-diff": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
